# wyrhta

./: .gitignore  Caddyfile  Cargo.toml  README.md  flake.nix  index.html  netlify.toml
api/: .envrc  Cargo.toml  dev_config.json
api/db/migrations/: 0001_initialize.sql  0002_add_handbuilt.sql  0003_add_multiples.sql
api/src/: config.rs  error.rs  jwt.rs  main.rs  models.rs  result.rs
api/src/handlers/: auth.rs  clay.rs  event.rs  image.rs  mod.rs  project.rs  work.rs
db/migrations/: 0001_initialize.sql
frontend/: .envrc  .gitignore  elm-land.json  elm.json  package-lock.json  package.json
frontend/assets/scss/: _colours.scss  admin.scss  main.scss
frontend/src/: Api.elm  Auth.elm  Effect.elm  Shared.elm  View.elm
frontend/src/Api/: Clay.elm  Event.elm  Login.elm  Project.elm  State.elm  Upload.elm  Work.elm
frontend/src/Layouts/: Sidebar.elm
frontend/src/Pages/: About.elm  Admin.elm  Dashboard.elm  Home_.elm  Login.elm  NotFound_.elm
frontend/src/Pages/Admin/Projects/Id_/: Edit.elm
frontend/src/Pages/Admin/Works/Id_/: Edit.elm
frontend/src/Pages/Project/: Id_.elm
frontend/src/Pages/Projects/: Create.elm  Id_.elm
frontend/src/Pages/Projects/Id_/: Delete.elm  Edit.elm
frontend/src/Pages/Work/: Id_.elm
frontend/src/Pages/Works/: Create.elm  Id_.elm
frontend/src/Pages/Works/Id_/: Delete.elm  Edit.elm  State.elm
frontend/src/Shared/: Model.elm  Msg.elm
frontend/src/Views/: Footer.elm  LoadingPage.elm  Posix.elm  String.elm  SummaryList.elm
src/: main.rs
src/handlers/: project.rs
