[package]
name = "wyrhta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = [ "full" ] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "chrono"] }
axum = "0.6.6"
serde = { version = "1.0.160", features = [ "derive" ] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = [ "serde" ] }
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"
http = "0.2.9"
